--- a/index.html
+++ b/index.html
@@ -18,14 +18,40 @@
 
 <p>Ao falar sobre bullying, estamos, acima de tudo, falando sobre o direito de cada indivíduo a ser tratado com dignidade e respeito, independentemente de suas características pessoais, como aparência, religião, orientação sexual ou qualquer outra forma de diversidade. O combate ao bullying é, assim, uma questão de justiça e humanidade, e cada um de nós tem um papel na criação de uma sociedade mais inclusiva e solidária.</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/DK-qeFsMA_U?si=sdaLF65JTaSkceAN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DK-qeFsMA_U?si=sdaLF65JTaSkceAN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+ 
 
 
+<h1>como evitar o bullying</h1>
 
 
+<h1> o bullying é um processo que envolve tanto a prevenção quanto a intervenção, e exige um esforço coletivo de todos os envolvidos, incluindo a pessoa que sofre o bullying, os espectadores, e as instituições, como escolas ou locais de trabalho. Aqui estão algumas estratégias que podem ajudar:</h1>
 
+<h1>1. Educação e conscientização</h1>
 
+<p>Ensinar sobre empatia e respeito: Isso pode ser feito em escolas, famílias e ambientes de trabalho. A empatia ajuda a reduzir os comportamentos agressivos, pois as pessoas começam a entender o impacto de suas palavras e ações nos outros.<p>
 
+Debater sobre diversidade e inclusão: Promover uma cultura de aceitação das diferenças ajuda a criar um ambiente onde o bullying é menos provável de ocorrer.
+
+<h1>2. Promoção de um ambiente seguro e acolhedor</h1>
+
+<p>Criação de políticas de tolerância zero: Em escolas e empresas, ter regras claras contra o bullying e garantir que haja consequências para quem pratica pode desencorajar esse comportamento.
+Espaços de apoio psicológico: Ter profissionais, como psicólogos ou orientadores, para ajudar quem está passando por situações de bullying pode ser uma maneira importante de prevenção.</p>
+
+<h1>3. Como a pessoa alvo pode se proteger</h1>
+
+<p>Falar sobre o que está acontecendo: Procurar apoio de amigos, familiares ou profissionais. Muitas vezes, quem sofre bullying tem vergonha ou medo de falar, mas desabafar é um passo importante.
+Desenvolver a autoconfiança: Trabalhar para fortalecer a autoestima e a confiança pode ajudar a pessoa a lidar melhor com situações de bullying. A prática de atividades que tragam prazer ou que ajudem a construir habilidades pode ser útil.</p>
+
+<h1>4. Intervenção de espectadores5. Promover a comunicação aberta</h1>
+
+</p> sobre o problema: Incentivar um ambiente onde todos possam falar abertamente sobre seus sentimentos e experiências pode ajudar a identificar e resolver conflitos antes que se tornem situações de bullying.</p>
+
+<h1>Apoio a longo prazo</h1>
+
+<p>Acompanhamento contínuo: O bullying pode deixar marcas profundas, e é importante que as vítimas recebam apoio emocional e psicológico para lidar com os efeitos a longo prazo.
+Lembrando que o bullying pode acontecer em qualquer lugar: escolas, trabalho, redes sociais. Em ambientes online, é igualmente crucial promover o respeito e a empatia
+Não ser cúmplice: Quem presencia o bullying tem o poder de intervir, seja oferecendo apoio à vítima, seja denunciando a situação. Ficar em silêncio muitas vezes acaba incentivando os agressores.</p>
 
 
 </body>
