--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bullying</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h1> O QUE E O BULLYING?</h1>
@@ -43,7 +44,7 @@ Espaços de apoio psicológico: Ter profissionais, como psicólogos ou orientado
 <p>Falar sobre o que está acontecendo: Procurar apoio de amigos, familiares ou profissionais. Muitas vezes, quem sofre bullying tem vergonha ou medo de falar, mas desabafar é um passo importante.
 Desenvolver a autoconfiança: Trabalhar para fortalecer a autoestima e a confiança pode ajudar a pessoa a lidar melhor com situações de bullying. A prática de atividades que tragam prazer ou que ajudem a construir habilidades pode ser útil.</p>
 
-<h1>4. Intervenção de espectadores5. Promover a comunicação aberta</h1>
+<h1>4. Intervenção de espectadorer Promover a comunicação aberta</h1>
 
 </p> sobre o problema: Incentivar um ambiente onde todos possam falar abertamente sobre seus sentimentos e experiências pode ajudar a identificar e resolver conflitos antes que se tornem situações de bullying.</p>
 
@@ -52,6 +53,14 @@ Desenvolver a autoconfiança: Trabalhar para fortalecer a autoestima e a confian
 <p>Acompanhamento contínuo: O bullying pode deixar marcas profundas, e é importante que as vítimas recebam apoio emocional e psicológico para lidar com os efeitos a longo prazo.
 Lembrando que o bullying pode acontecer em qualquer lugar: escolas, trabalho, redes sociais. Em ambientes online, é igualmente crucial promover o respeito e a empatia
 Não ser cúmplice: Quem presencia o bullying tem o poder de intervir, seja oferecendo apoio à vítima, seja denunciando a situação. Ficar em silêncio muitas vezes acaba incentivando os agressores.</p>
+
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eQCm-Yl0oZs?si=5yx3cVRe0xEubip9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+
 
 
 </body>
