--- a/index.html
+++ b/index.html
@@ -62,9 +62,42 @@ Não ser cúmplice: Quem presencia o bullying tem o poder de intervir, seja ofer
 
 
 
+<h1>O bullying é um fenômeno complexo que pode ser causado por uma combinação de fatores individuais, sociais, familiares e culturais. Aqui estão algumas das principais causas que contribuem para a ocorrência do bullying:</h1>
 
+<h1> 1.Fatores Pessoais</h1>
 
+<p>Baixa autoestima: Indivíduos com baixa autoestima podem se envolver em bullying para tentar se sentir superiores ou no controle, compensando suas próprias inseguranças.
+Falta de empatia: Pessoas que não conseguem se colocar no lugar do outro ou entender o impacto emocional de suas ações têm maior propensão a praticar bullying.
+Comportamento agressivo ou impulsivo: Algumas pessoas têm tendências mais agressivas ou impulsivas, o que pode aumentar a probabilidade de envolvimento em bullying.</p>
 
+<h1>2. Fatores Familiares</h1>
+
+<p>Ambiente familiar disfuncional: Crianças que crescem em lares onde há violência, negligência ou desentendimentos constantes podem reproduzir esses comportamentos em seu círculo social.
+Falta de supervisão e apoio parental: A falta de envolvimento dos pais na vida dos filhos pode resultar em comportamentos inadequados, como o bullying, pois a criança ou adolescente pode não ser corrigido ou orientado adequadamente.</p>
+
+<h1>3.Influência Social e Cultural</h1>
+
+<p>Normas sociais de poder e hierarquia: Em algumas culturas ou grupos sociais, há uma valorização do poder sobre os outros, o que pode incentivar comportamentos de bullying, principalmente em grupos com uma clara divisão de status ou hierarquia.
+Pressão dos pares: A pressão para se encaixar em determinados grupos pode levar jovens a praticar bullying para obter aceitação ou aprovação social. O desejo de pertencimento pode motivar a exclusão ou perseguição de outros para se afirmar dentro de um grupo.</p>
+
+<h1> 4 Fatores Educacionais</h1>
+
+<p>Ambiente escolar inadequado: A falta de políticas eficazes contra o bullying, a ineficiência de medidas de prevenção e a negligência por parte de professores e funcionários podem contribuir para a perpetuação do bullying nas escolas.
+Comportamentos observados em professores ou colegas: Em alguns casos, professores ou outros alunos podem dar exemplo de comportamentos agressivos ou intolerantes, criando um ambiente que normaliza o bullying.</p>
+
+<h1>5.Fatores Psicológicos</h1>
+
+<p>Necessidade de controle: Algumas pessoas praticam bullying como uma forma de exercer controle sobre os outros, muitas vezes porque sentem que não têm controle sobre outros aspectos de sua vida.
+Frustração ou raiva interna: Pessoas que lidam com sentimentos de frustração ou raiva acumulada podem projetar essas emoções em outras pessoas, especialmente aquelas que consideram mais vulneráveis.</p>
+
+<h1>6.tores de Mídia e Tecnologia</h1>
+
+<p>Influência das redes sociais: A popularização das redes sociais criou novos espaços para o bullying, como o "cyberbullying", onde os agressores podem se esconder atrás da tela e, muitas vezes, sentir-se mais impunes.
+Representações distorcidas na mídia: Programas de TV, filmes e até jogos podem retratar comportamentos agressivos ou humilhantes como normais ou engraçados, o que pode reforçar atitudes de bullying.</p>
+
+<h4>Essas causas não são isoladas; muitas vezes, elas se combinam e se inter-relacionam, tornando o problema do bullying ainda mais complexo. É importante agir de forma preventiva, abordando tanto as causas quanto as consequências do bullying para reduzir seu impacto e promover um ambiente mais saudável e respeitoso.</h4>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RYr8l1vo5KQ?si=p6D0RFP8n5SINpqd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 
